--- a/arceusainu.html
+++ b/arceusainu.html
@@ -50,6 +50,17 @@
     <p>Ultimately, Pokemon Legends: Arceus and the representation it does actually have for Ainu people are a net win; it provided some long awaited mechanical overhauls to the franchise that will hopefully continue to progress even further, and modern Japanese society even acknowledging the Ainu and what happened to them is a relatively recent development, so it is honestly nice to see that they even tried. It’s just, for me, all bogged down with the weight of colonization, much like when any colonizing culture chooses to represent the people they’ve colonized without allowing those people into the creative process. It’s trinkets and costumes, with a sprinkling of the actual culture coming from the side characters like in the way Diamond and Pearl Clan members respect and revere Pokémon, or even just the ways they act and think.</p>
     <p>At the end of it all, though, even if Adaman or Irida say they disagree with Kamado and the way he’s going about things, they still end up going along with his wishes for some reason that’s never quite explained in-game, but seemingly only because they’re afraid of what’s going to happen with the rift and they’ve just decided to trust this random man in charge of Galaxy Team instead of their long-held beliefs. I could go on for another 1200 words (and probably more on top of that) about all the other ways this reading could go even deeper, but I feel like this is a good place to stop and make my point — no one is a bad person for playing or enjoying this game. I don’t even think that people who worked on this game fully understood the implications of some of these aspects. I just want people to pay more attention to the cultures they choose to make games and other media about and be honest about giving what they’re doing the best effort they can, not only to make the people they’re talking about feel happy and respected, but to help educate others on these different cultures and what happened to them, rather than make us all just another set dressing.</p>
         <hr>
+               <div class="buttons-row">
+        <img src="imhigh.gif" width="88" height="31" alt="">
+        <img src="lavalamp.gif" width="88" height="31" alt="">
+        <img src="lesbianflag.png" width="88" height="31" alt="">
+        <img src="transflag.png" width="88" height="31" alt="">
+        <img src="mari.gif" width="88" height="31" alt="">
+        <img src="mafumafu.gif" width="88" height="31" alt="">
+        <img src="elster.gif" width="88" height="31" alt="">
+        <img src="becritical.gif" width="88" height="31" alt="">
+        <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
+        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
     </div>
         <script src="oneko.js" data-cat="fox.png"></script>
 </body>
