--- a/cocoon review.html
+++ b/cocoon review.html
@@ -54,6 +54,17 @@
         <p>Despite that layered and compounding challenge, Cocoon doesn't last very long at all – my first playthrough took a crisp five and a half hours, though it also contains plenty of replay value in finding the hidden Moon Ancestor collectibles tucked away in each world. Each of these collectibles are incredibly well hidden, but the feeling of intrigue I got while finding them (and the achievements you get for them) compelled me to find more whenever I could. Even though I wasn't able to find them all, the feeling of the few that I did find blew me away; I'll definitely be coming back to find the rest.</p>
         <p>Cocoon is a breathtaking puzzle-platformer that borders on psychedelic. Building on what made Inside designer Jeppe Carlsen's previous work stand out, Cocoon not only presents a mind-bending journey through the cosmos via fascinating worlds-within-worlds puzzle mechanics that beg you to delve another layer deeper, but an interesting take on the repetition of work, life, and being part of a "bigger picture." With a relatively short playtime and some well-hidden collectibles that make it worth replaying, Cocoon is a must-play for fans of Limbo or Inside, or anyone looking for a new puzzle adventure to play and then sit down and think about for a while.</p>
         <hr>
+                   <div class="buttons-row">
+        <img src="imhigh.gif" width="88" height="31" alt="">
+        <img src="lavalamp.gif" width="88" height="31" alt="">
+        <img src="lesbianflag.png" width="88" height="31" alt="">
+        <img src="transflag.png" width="88" height="31" alt="">
+        <img src="mari.gif" width="88" height="31" alt="">
+        <img src="mafumafu.gif" width="88" height="31" alt="">
+        <img src="elster.gif" width="88" height="31" alt="">
+        <img src="becritical.gif" width="88" height="31" alt="">
+        <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
+        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
     </div>
         <script src="oneko.js" data-cat="fox.png"></script>
 </body>
