--- a/eulogy.html
+++ b/eulogy.html
@@ -50,6 +50,17 @@
         <p>As much as I loved to disagree with him, he will always be a foundational part of who I am. There would not be what I affectionately refer to as "the white girl trapped inside my soul" if it weren't for him; my love of a good beer, good barbecue, country music, shooting a gun, playing cards, and going fishing would never have existed without the old man. I wouldn't have spent time on the farm growing up if it weren't for him. And now, I'll never get to go out and hunt, or fish, or have a beer, or smoke some meat with him. Ever again. I'm gonna miss that old man every day.</p>        
         <hr>
     </div>
+               <div class="buttons-row">
+        <img src="imhigh.gif" width="88" height="31" alt="">
+        <img src="lavalamp.gif" width="88" height="31" alt="">
+        <img src="lesbianflag.png" width="88" height="31" alt="">
+        <img src="transflag.png" width="88" height="31" alt="">
+        <img src="mari.gif" width="88" height="31" alt="">
+        <img src="mafumafu.gif" width="88" height="31" alt="">
+        <img src="elster.gif" width="88" height="31" alt="">
+        <img src="becritical.gif" width="88" height="31" alt="">
+        <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
+        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
         <script src="oneko.js" data-cat="fox.png"></script>
 </body>
 </html>
