--- a/momdungeon.html
+++ b/momdungeon.html
@@ -50,6 +50,17 @@
         <p>I learned so much from Boyfriend Dungeon. I learned about certain ways I feel about dating that I didn’t know about myself before, and about friendships too. The most valuable lesson that I learned, however, is that I had a toxic relationship with my mother for basically my whole life. Seeing that fictional characters had relationships like that, and participating in one, made me aware that having a healthy, friendly relationship with your mom might not be something that only exists in fantasy. It made me ask people in my life about their moms. It made me realize that not all of the other kids’ moms were putting on a show of loving their kids in public like mine was. By the end of the game, those realizations broke me. Why was I constantly making excuses for you? After all, you’re the one that cut me out after I came out. I know that I want to be a better mom than you ever were for me, and now I’m learning how to be just that for my future children. So thanks, Mom, for everything– you did teach me a lot throughout the years. But there’s lots of other moms I’d like to thank, too– specifically, thanks, Mom from Boyfriend Dungeon, for showing me that “Mom” doesn’t have to mean what I thought it meant.</p>
         <hr>
     </div>
+               <div class="buttons-row">
+        <img src="imhigh.gif" width="88" height="31" alt="">
+        <img src="lavalamp.gif" width="88" height="31" alt="">
+        <img src="lesbianflag.png" width="88" height="31" alt="">
+        <img src="transflag.png" width="88" height="31" alt="">
+        <img src="mari.gif" width="88" height="31" alt="">
+        <img src="mafumafu.gif" width="88" height="31" alt="">
+        <img src="elster.gif" width="88" height="31" alt="">
+        <img src="becritical.gif" width="88" height="31" alt="">
+        <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
+        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
         <script src="oneko.js" data-cat="fox.png"></script>
 </body>
 </html>
