--- a/about.html
+++ b/about.html
@@ -41,7 +41,21 @@
         <p>this is where i keep backups of professional work i'd like to keep in one place, where i post personal blogs, and where i keep short stories and pictures that are special to me (eventually).</p>
         <p>i kinda do a lot of different stuff, but my main thing is that i'm a writer; i've worked in games journalism off and on for about 5 years, and i am currently working on my first novel.</p>
         <p>in my free time, i like to play video games, draw, and take photos of things i see while i'm on walks or traveling.</p>
-        </div>
+
+            <div class="buttons-row">
+        <img src="imhigh.gif" width="88" height="31" alt="">
+        <img src="lavalamp.gif" width="88" height="31" alt="">
+        <img src="lesbianflag.png" width="88" height="31" alt="">
+        <img src="transflag.png" width="88" height="31" alt="">
+        <img src="mari.gif" width="88" height="31" alt="">
+        <img src="mafumafu.gif" width="88" height="31" alt="">
+        <img src="elster.gif" width="88" height="31" alt="">
+        <img src="becritical.gif" width="88" height="31" alt="">
+        <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
+        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
+      <!-- add more buttons -->
+
+      </div>
     <script src="oneko.js" data-cat="fox.png"></script>
 </body>
 </html>
