--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <li><a href="#">pictures (under construction)</a></li>
         </ul>
         <hr>
-                   <div class="buttons-row">
+    </div>
+                       <div class="buttons-row">
         <img src="imhigh.gif" width="88" height="31" alt="">
         <img src="lavalamp.gif" width="88" height="31" alt="">
         <img src="lesbianflag.png" width="88" height="31" alt="">
