--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         h1 { color: #44383f; text-align: left; }
         img { border: 2px transparent #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
+           .buttons-row {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       gap: 1px; /* optional: adds space between images */
+   }
     </style>
 </head>
 <body>
@@ -52,12 +58,13 @@
         <img src="lavalamp.gif" width="88" height="31" alt="">
         <img src="lesbianflag.png" width="88" height="31" alt="">
         <img src="transflag.png" width="88" height="31" alt="">
+        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
         <img src="mari.gif" width="88" height="31" alt="">
         <img src="mafumafu.gif" width="88" height="31" alt="">
         <img src="elster.gif" width="88" height="31" alt="">
         <img src="becritical.gif" width="88" height="31" alt="">
         <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
-        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
+        <img src="suletta.gif" width="88" height="31" alt="">
     </div>
     <script src="oneko.js" data-cat="fox.png"></script>
 </body>
