--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
        display: flex;
        justify-content: center;
        align-items: center;
-       gap: 1px; /* optional: adds space between images */
+       gap: 1px;
+       margin-bottom: -20px; /* optional: adds space between images */
    }
     </style>
 </head>
