--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
         <img src="mari.gif" width="88" height="31" alt="">
         <img src="mafumafu.gif" width="88" height="31" alt="">
-        <a href="https://rose-engine.org/signalis/" target="_blank" rel="noopener noreferrer"><img src="mafumafu.gif" width="88" height="31" alt=""></a>
+        <a href="https://rose-engine.org/signalis/" target="_blank" rel="noopener noreferrer"><img src="elster.gif" width="88" height="31" alt=""></a>
         <img src="becritical.gif" width="88" height="31" alt="">
         <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
         <img src="suletta.gif" width="88" height="31" alt="">
