--- a/eulogy.html
+++ b/eulogy.html
@@ -49,17 +49,20 @@
         <p>Earlier, I mentioned he didn't go out much. That was true about 50 weeks out of the year. Those other two weeks were a mostly-annual trip to Las Vegas, Nevada. This is where I first saw Dave, the man, and not Andy, the soldier. When my dad got to go to Vegas, it was like all the weight of everything in life came off his shoulders. For those two weeks, money suddenly became a minor barrier to getting the things we wanted, work was nonexistent, and we actually, finally just got to Hang Out. Ever since I was about eight years old, the yearly Vegas trip would be something I dearly looked forward to, just to get to see my dad be a Regular Dude. If he was normally at a 6 or 7, Vegas turned my dad up to 10 or 11. The man who was always in bed by 10 PM at the latest, waking up at 5:30 for PT, flying twelve-hour missions, etc. was suddenly staying up until 5 or 6 AM playing blackjack, drinking whiskey, and smoking cigarettes. For those two weeks, I got to see my dad just relax. It was the best shit in the world. I'm sure the buffets, seemingly-unlimited arcade card, and rollercoasters helped, too, but my favorite memories of those trips will always be getting to see my dad just cut loose. I will always fondly remember the time that he felt bad for staying out too late the one time we went together when I was an adult but not old enough to gamble; he tossed a wad of bills at my pillow as he walked in and slurred, "Get yourself something nice tomorrow, kid. Sorry I fucked around all night." I still have the money clip from that wad. I use it when I need to save up cash for something important. We never went to Vegas together after I turned 21; it will always be one of my greatest regrets in life.</p>
         <p>As much as I loved to disagree with him, he will always be a foundational part of who I am. There would not be what I affectionately refer to as "the white girl trapped inside my soul" if it weren't for him; my love of a good beer, good barbecue, country music, shooting a gun, playing cards, and going fishing would never have existed without the old man. I wouldn't have spent time on the farm growing up if it weren't for him. And now, I'll never get to go out and hunt, or fish, or have a beer, or smoke some meat with him. Ever again. I'm gonna miss that old man every day.</p>        
         <hr>
-                   <div class="buttons-row">
+        
+    </div>
+                           <div class="buttons-row">
         <img src="imhigh.gif" width="88" height="31" alt="">
         <img src="lavalamp.gif" width="88" height="31" alt="">
         <img src="lesbianflag.png" width="88" height="31" alt="">
         <img src="transflag.png" width="88" height="31" alt="">
+        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
         <img src="mari.gif" width="88" height="31" alt="">
         <img src="mafumafu.gif" width="88" height="31" alt="">
-        <img src="elster.gif" width="88" height="31" alt="">
+        <a href="https://rose-engine.org/signalis/" target="_blank" rel="noopener noreferrer"><img src="elster.gif" width="88" height="31" alt=""></a>
         <img src="becritical.gif" width="88" height="31" alt="">
         <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
-        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
+        <img src="suletta.gif" width="88" height="31" alt="">
     </div>
     
         <script src="oneko.js" data-cat="fox.png"></script>
