--- a/momdungeon.html
+++ b/momdungeon.html
@@ -49,17 +49,20 @@
         <p>Throughout the rest of the game, “Mom” will send texts about any potential partners that Jesse may or may not have told her about. Little things, ranging from “Jesse tells me you have a very attractive friend,” to, “If they hurt you… tell me. Mama will take care of it,” followed by a message consisting solely of knife emojis. I thought to myself, “Am I friends with my mom in this game? That’s like, a thing?” These messages just kept eroding the dam I had built up around my feelings about my own mother, until, by the end of the game, that dam didn’t exist any more.</p>
         <p>I learned so much from Boyfriend Dungeon. I learned about certain ways I feel about dating that I didn’t know about myself before, and about friendships too. The most valuable lesson that I learned, however, is that I had a toxic relationship with my mother for basically my whole life. Seeing that fictional characters had relationships like that, and participating in one, made me aware that having a healthy, friendly relationship with your mom might not be something that only exists in fantasy. It made me ask people in my life about their moms. It made me realize that not all of the other kids’ moms were putting on a show of loving their kids in public like mine was. By the end of the game, those realizations broke me. Why was I constantly making excuses for you? After all, you’re the one that cut me out after I came out. I know that I want to be a better mom than you ever were for me, and now I’m learning how to be just that for my future children. So thanks, Mom, for everything– you did teach me a lot throughout the years. But there’s lots of other moms I’d like to thank, too– specifically, thanks, Mom from Boyfriend Dungeon, for showing me that “Mom” doesn’t have to mean what I thought it meant.</p>
         <hr>
-                   <div class="buttons-row">
+        
+    </div>
+                           <div class="buttons-row">
         <img src="imhigh.gif" width="88" height="31" alt="">
         <img src="lavalamp.gif" width="88" height="31" alt="">
         <img src="lesbianflag.png" width="88" height="31" alt="">
         <img src="transflag.png" width="88" height="31" alt="">
+        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
         <img src="mari.gif" width="88" height="31" alt="">
         <img src="mafumafu.gif" width="88" height="31" alt="">
-        <img src="elster.gif" width="88" height="31" alt="">
+        <a href="https://rose-engine.org/signalis/" target="_blank" rel="noopener noreferrer"><img src="elster.gif" width="88" height="31" alt=""></a>
         <img src="becritical.gif" width="88" height="31" alt="">
         <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
-        <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
+        <img src="suletta.gif" width="88" height="31" alt="">
     </div>
     
         <script src="oneko.js" data-cat="fox.png"></script>
