--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
         h1 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
+                .buttons-row {display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px; /}
     </style>
 </head>
 <body>
