--- a/twitch.html
+++ b/twitch.html
@@ -8,6 +8,7 @@
         h1,h3 { color: #44383f; text-align: left; }
         img { border: 2px transparent #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
+                .buttons-row {display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px; /}
     </style>
     
 <title>hi! i'm hana kim!</title>
@@ -25,6 +26,7 @@
 <meta property="twitter:title" content="hi! i'm hana kim!" />
 <meta property="twitter:description" content="" />
 <meta property="twitter:image" content="sleeperedpanda.png" />
+
 
 </head>
 <body>
