--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         h1 { color: #44383f; text-align: left; }
         img { border: 2px transparent #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
-        .buttons-row {display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px; /}
+        .buttons-row {position:fixed; display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px;}
     </style>
 </head>
 <body>
