--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-     <a href="index.html"><img src="sleeperedpanda.png" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
+     <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
   <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
                 <a href="about.html">about</a>
