--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html>
 <head>
     <title>hi! i'm hana kim!</title>
-         <a href="index.html"><img src="sleeperedpanda.png" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 0px auto; border: none;"></a>
     <meta name="title" content="hi! i'm hana kim!"/>
     <meta name="description" content="im hana"/>
 
@@ -29,7 +28,7 @@
     </style>
 </head>
 <body>
-
+     <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 0px auto; border: none;"></a>
   <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
         <a href="about.html">about</a>
