--- a/pokemongender.html
+++ b/pokemongender.html
@@ -8,7 +8,7 @@
         h1,h5 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
-                .buttons-row {position:fixed; display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px;}
+        .buttons-row {display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px;}
     </style>
     
 <title>hi! i'm hana kim!</title>
