--- a/twitch.html
+++ b/twitch.html
@@ -65,6 +65,7 @@
         <img src="transflag.png" width="88" height="31" alt="">
         <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
         <img src="mari.gif" width="88" height="31" alt="">
+        <img src="machu.gif" width="88" height="31" alt="">
         <img src="mafumafu.gif" width="88" height="31" alt="">
         <a href="https://rose-engine.org/signalis/" target="_blank" rel="noopener noreferrer"><img src="elster.gif" width="88" height="31" alt=""></a>
         <img src="becritical.gif" width="88" height="31" alt="">
