--- a/momdungeon.html
+++ b/momdungeon.html
@@ -6,7 +6,7 @@
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
         h1,h3 { color: #44383f; text-align: left; }
-        img { border: 2px solid #1f1f1f; }
+        img { border: 2px transparent #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
         .buttons-row {display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px;}
     </style>
