--- a/twitch.html
+++ b/twitch.html
@@ -8,7 +8,7 @@
         h1,h3 { color: #44383f; text-align: left; }
         img { border: 2px transparent #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
-        .buttons-row {display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px;}
+        .buttons-row,.buttons-row2 {display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px;}
     </style>
     
 <title>hi! i'm hana kim!</title>
@@ -72,6 +72,11 @@
         <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
         <img src="suletta.gif" width="88" height="31" alt="">
     </div>
+        <div class="buttons-row2">
+        <a href="https://bsky.app/profile/hanayanagi.kim" target="_blank" rel="noopener noreferrer"><img src="bluesky.png" width="88" height="31" alt=""></a>  
+        <a href="https://hanakoyangi.tumblr.com/" target="_blank" rel="noopener noreferrer"><img src="tumblr.png" width="88" height="31" alt=""></a>
+    </div>
+
         <script src="oneko.js" data-cat="fox.png"></script>
 </body>
 </html>
