--- a/bsky.html
+++ b/bsky.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hi! i'm hana kim! - about me</title>
+    <title>hi! i'm hana kim! - the poasts</title>
     <meta name="title" content="hi! i'm hana kim!"/>
     <meta name="description" content="im hana"/>
 
@@ -27,45 +28,57 @@
     </style>
 </head>
 <body>
-     <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
+     <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 0px auto; border: none;"></a>
   <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
-                <a href="about.html">about</a>
+        <a href="about.html">about</a>
+        <a href="bsky.html">the poasts</a>
         <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
         <a href="#" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
     </nav>
      <div class="container">
         <h1>Hi! I'm Hana Kim!</h1>
-        <marquee>about</marquee>
-        <p>hey hi howdy hello! i'm hana yanagi kim! my pronouns are she/they/fox and i am kinda just hanging out.</p>
-        <p>welcome to my website! this is where i keep backups of professional work i'd like to keep in one place, where i post personal blogs, and where i keep short stories and pictures that are special to me (eventually).</p>
-        <p>i kinda do a lot of different stuff, but my main thing is that i'm a writer; i've worked in games journalism off and on for about 5 years, and i am currently working on my first novel.</p>
-        <p>in my free time, i like to play video games, draw, and take photos of things i see while i'm on walks or traveling.</p>
+        <marquee>the poasts</marquee>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/bsky-embed/dist/bsky-embed.es.js" async></script>
+<bsky-embed
+    username="hanayanagi.kim"
+    limit="25"
+    link-target="_blank"
+    link-image="true"
+    load-more="true"
+    disable-styles="false"
+    custom-styles=".border-slate-300 { border-color: #ff69b4; }"
+    show-images="true"
+    show-replies="true"
+    show-reposts="true"
+    show-quote="true"
+    date-format='{"type":"absolute","locale":"de-DE","options":{"weekday":"long","year":"numeric","month":"long","day":"numeric"}}'
+  >
+  </bsky-embed>
+        </ul>
+        <hr>
 
- 
-      <!-- add more buttons -->
 
-      </div>
-                             <div class="buttons-row">
+       </div>
+                       <div class="buttons-row">
         <img src="imhigh.gif" width="88" height="31" alt="">
         <img src="lavalamp.gif" width="88" height="31" alt="">
         <img src="lesbianflag.png" width="88" height="31" alt="">
         <img src="transflag.png" width="88" height="31" alt="">
         <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
         <img src="mari.gif" width="88" height="31" alt="">
-        <img src="machu.gif" width="88" height="31" alt="">
+                <img src="machu.gif" width="88" height="31" alt="">
         <img src="mafumafu.gif" width="88" height="31" alt="">
         <a href="https://rose-engine.org/signalis/" target="_blank" rel="noopener noreferrer"><img src="elster.gif" width="88" height="31" alt=""></a>
         <img src="becritical.gif" width="88" height="31" alt="">
         <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
         <img src="suletta.gif" width="88" height="31" alt="">
     </div>
-        <div class="buttons-row2">
+    <div class="buttons-row2">
         <a href="https://bsky.app/profile/hanayanagi.kim" target="_blank" rel="noopener noreferrer"><img src="bluesky.png" width="88" height="31" alt=""></a>  
         <a href="https://hanakoyangi.tumblr.com/" target="_blank" rel="noopener noreferrer"><img src="tumblr.png" width="88" height="31" alt=""></a>
     </div>
-
     <script src="oneko.js" data-cat="fox.png"></script>
 </body>
 </html>
