--- a/nonfiction.html
+++ b/nonfiction.html
@@ -34,6 +34,7 @@
 <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
                 <a href="about.html">about</a>
+                <a href="bsky.html">the poasts</a>
         <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
         <a href="#" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
