--- a/planetanime.html
+++ b/planetanime.html
@@ -32,8 +32,8 @@
      <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto; border: none;"></a>
    <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
-                <a href="about.html">about</a>
-                <a href="bsky.html">the poasts</a>
+        <a href="about.html" style="margin:0 15px;">about</a>
+        <a href="bsky.html" style="margin:0 15px;">the poasts</a>
         <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
         <a href="#" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
