--- a/bsky.html
+++ b/bsky.html
@@ -29,10 +29,10 @@
 </head>
 <body>
      <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 0px auto; border: none;"></a>
-  <nav style="text-align:center; margin-bottom:20px;">
+   <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
-        <a href="about.html">about</a>
-        <a href="bsky.html">the poasts</a>
+        <a href="about.html" style="margin:0 15px;">about</a>
+        <a href="bsky.html" style="margin:0 15px;">the poasts</a>
         <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
         <a href="#" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
@@ -53,7 +53,7 @@
     show-replies="true"
     show-reposts="true"
     show-quote="true"
-    date-format='{"type":"absolute","locale":"de-DE","options":{"weekday":"long","year":"numeric","month":"long","day":"numeric"}}'
+    date-format='{"type":"absolute","locale":"en-US","options":{"weekday":"long","year":"numeric","month":"long","day":"numeric"}}'
   >
   </bsky-embed>
         </ul>
