--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <p>hey</p>
         <ul>
             <li><a href="about.html">about me</a></li>
+            <li><a href="bsky.html">the poasts</a></li>
             <li><a href="nonfiction.html">non-fiction writing, musings, thoughts</a></li>
             <li><a href="#">fiction (under construction)</a></li>
             <li><a href="#">pictures (under construction)</a></li>
