--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>hi! i'm hana kim!</title>
+      <link rel="icon" href="sleeperedpanda.png" type="image/png">
     <meta name="title" content="hi! i'm hana kim!"/>
     <meta name="description" content="im hana"/>
 
