--- a/planetanime.html
+++ b/planetanime.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hi! i'm hana kim! - thanks, mom, but specifically, mom from boyfriend dungeon</title>
+    <title>hi! i'm hana kim! - planet anime</title>
+          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
