--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>hi! i'm hana kim! - about me</title>
+          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+
     <meta name="title" content="hi! i'm hana kim!"/>
     <meta name="description" content="im hana"/>
 
