--- a/arceusainu.html
+++ b/arceusainu.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>hi! i'm hana kim! - pokémon legends: arceus — a step forward and a step back</title>
+          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
