--- a/bsky.html
+++ b/bsky.html
@@ -3,7 +3,9 @@
 <html>
 <head>
     <title>hi! i'm hana kim! - the poasts</title>
-    <meta name="title" content="hi! i'm hana kim!"/>
+    <meta name="title" content="hi! i'm hana kim!"/
+          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+>
     <meta name="description" content="im hana"/>
 
     <meta property="og:type" content="website"/>
