--- a/nonfiction.html
+++ b/nonfiction.html
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hi! i'm hana kim!</title>
+    <title>hi! i'm hana kim! - non-fiction</title>
+          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
