--- a/bsky.html
+++ b/bsky.html
@@ -3,10 +3,9 @@
 <html>
 <head>
     <title>hi! i'm hana kim! - the poasts</title>
-    <meta name="title" content="hi! i'm hana kim!"/
-          <link rel="icon" href="sleeperedpanda.png" type="image/png">
->
+    <meta name="title" content="hi! i'm hana kim!"/>
     <meta name="description" content="im hana"/>
+          <link rel="icon" href="sleeperedpanda.png" type="image/png">
 
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.hanayanagi.kim/"/>
