--- a/twitch.html
+++ b/twitch.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>hi! i'm hana kim! - meet the team behind twitch’s joy-giving fairy modmother</title>
-          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+          <link rel="icon" href="icon.png" type="image/png">
 
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
