--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>hi! i'm hana kim! - about me</title>
-          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+          <link rel="icon" href="icon.png" type="image/png">
 
     <meta name="title" content="hi! i'm hana kim!"/>
     <meta name="description" content="im hana"/>
