--- a/arceusainu.html
+++ b/arceusainu.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>hi! i'm hana kim! - pokémon legends: arceus — a step forward and a step back</title>
-          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+          <link rel="icon" href="icon.png" type="image/png">
 
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
