--- a/bsky.html
+++ b/bsky.html
@@ -5,7 +5,7 @@
     <title>hi! i'm hana kim! - the poasts</title>
     <meta name="title" content="hi! i'm hana kim!"/>
     <meta name="description" content="im hana"/>
-          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+          <link rel="icon" href="icon.png" type="image/png">
 
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.hanayanagi.kim/"/>
