--- a/momdungeon.html
+++ b/momdungeon.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>hi! i'm hana kim! - thanks, mom, but specifically, mom from boyfriend dungeon</title>
-          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+          <link rel="icon" href="icon.png" type="image/png">
 
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
