--- a/nonfiction.html
+++ b/nonfiction.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>hi! i'm hana kim! - non-fiction</title>
-          <link rel="icon" href="sleeperedpanda.png" type="image/png">
+          <link rel="icon" href="icon.png" type="image/png">
 
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
