--- a/bsky.html
+++ b/bsky.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hi! i'm hana kim! - the poasts</title>
+    <title>hi! i'm hana kim! - microblogging</title>
     <meta name="title" content="hi! i'm hana kim!"/>
     <meta name="description" content="im hana"/>
           <link rel="icon" href="icon.png" type="image/png">
@@ -33,8 +33,8 @@
    <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
         <a href="about.html" style="margin:0 15px;">about</a>
-        <a href="bsky.html" style="margin:0 15px;">the poasts</a>
-        <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
+        <a href="bsky.html" style="margin:0 15px;">microblogging</a>
+        <a href="nonfiction.html" style="margin:0 15px;">macroblogging</a>
         <a href="#" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
     </nav>
