--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
    <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
         <a href="about.html" style="margin:0 15px;">about</a>
-        <a href="bsky.html" style="margin:0 15px;">the poasts</a>
-        <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
+        <a href="bsky.html" style="margin:0 15px;">microblogging</a>
+        <a href="nonfiction.html" style="margin:0 15px;">macroblogging</a>
         <a href="#" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
     </nav>
@@ -44,8 +44,8 @@
         <p>hey</p>
         <ul>
             <li><a href="about.html">about me</a></li>
-            <li><a href="bsky.html">the poasts</a></li>
-            <li><a href="nonfiction.html">non-fiction writing, musings, thoughts</a></li>
+            <li><a href="bsky.html">microblogging - bluesky feed</a></li>
+            <li><a href="nonfiction.html">macroblogging - non-fiction writing, musings, thoughts</a></li>
             <li><a href="#">fiction (under construction)</a></li>
             <li><a href="#">pictures (under construction)</a></li>
         </ul>
