--- a/nonfiction.html
+++ b/nonfiction.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hi! i'm hana kim! - non-fiction</title>
+    <title>hi! i'm hana kim! - macroblogging</title>
           <link rel="icon" href="icon.png" type="image/png">
 
     <style>
@@ -36,8 +36,8 @@
    <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
         <a href="about.html" style="margin:0 15px;">about</a>
-        <a href="bsky.html" style="margin:0 15px;">the poasts</a>
-        <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
+        <a href="bsky.html" style="margin:0 15px;">microblogging</a>
+        <a href="nonfiction.html" style="margin:0 15px;">macroblogging</a>
         <a href="#" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
     </nav>
