--- a/cocoon review.html
+++ b/cocoon review.html
@@ -63,24 +63,28 @@
         <hr>
 
     </div>
-                           <div class="buttons-row">
+                       <div class="buttons-row">
         <img src="imhigh.gif" width="88" height="31" alt="">
         <img src="lavalamp.gif" width="88" height="31" alt="">
-        <img src="lesbianflag.png" width="88" height="31" alt="">
-        <a href="https://hrtcafe.net" target="_blank" rel="noopener noreferrer"><img src="transflag.png" width="88" height="31" alt=""></a>
+        <img src="ffxiv.png" width="88" height="31" alt="">
         <a href="https://bdsmovement.net/" target="_blank" rel="noopener noreferrer"><img src="standwith.png" width="88" height="31" alt=""></a>  
         <img src="mari.gif" width="88" height="31" alt="">
-                <img src="machu.gif" width="88" height="31" alt="">
+        <img src="machu.gif" width="88" height="31" alt="">
+        <img src="mariners.png" width="88" height="31" alt="">
         <img src="mafumafu.gif" width="88" height="31" alt="">
         <a href="https://rose-engine.org/signalis/" target="_blank" rel="noopener noreferrer"><img src="elster.gif" width="88" height="31" alt=""></a>
         <img src="becritical.gif" width="88" height="31" alt="">
         <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
         <img src="suletta.gif" width="88" height="31" alt="">
     </div>
-        <div class="buttons-row2">
+    <div class="buttons-row2">
+        <img src="hokkaido.png" width="88" height="31" alt="">
+        <img src="lesbianflag.png" width="88" height="31" alt="">
         <a href="https://bsky.app/profile/hanayanagi.kim" target="_blank" rel="noopener noreferrer"><img src="bluesky.png" width="88" height="31" alt=""></a>  
         <a href="https://hanakoyangi.tumblr.com/" target="_blank" rel="noopener noreferrer"><img src="tumblr.png" width="88" height="31" alt=""></a>
-    </div>
+        <a href="https://hrtcafe.net" target="_blank" rel="noopener noreferrer"><img src="transflag.png" width="88" height="31" alt=""></a>
+        <img src="obbears.png" width="88" height="31" alt="">
+        </div>
 
         <script src="oneko.js" data-cat="fox.png"></script>
 </body>
