--- a/bsky.html
+++ b/bsky.html
@@ -51,7 +51,7 @@
     disable-styles="false"
     custom-styles=".border-slate-300 { border-color: #ff69b4; }"
     show-images="true"
-    show-reply="true"
+    show-replies="true"
     show-reposts="true"
     show-quote="true"
     date-format='{"type":"absolute","locale":"en-US","options":{"weekday":"long","year":"numeric","month":"long","day":"numeric"}}'
