moving blog post

--- a/nonfiction.html
+++ b/nonfiction.html
@@ -56,6 +56,7 @@
         <ul>
             <li><a href="pokemongender.html">pokémon, gender, and you, or; are you a boy? or are you a girl?</a></li>
             <li><a href="eulogy.html">Eulogy for an Old Soldier</a></li>
+            <li><a href="moving.html">personal: moving.</a></li>
         </ul>
         <hr>
         
