--- a/nonfiction.html
+++ b/nonfiction.html
@@ -26,7 +26,7 @@
 
 <meta property="twitter:card" content="sleeperedpanda.png" />
 <meta property="twitter:url" content="http://www.hanayanagi.kim/" />
-<meta property="twitter:title" content="hi! i'm hana kim!" />
+<meta property="twitter:title" content="hi! i'm hana kim!- personal: moving." />
 <meta property="twitter:description" content="" />
 <meta property="twitter:image" content="sleeperedpanda.png" />
 
