--- a/nonfiction.html
+++ b/nonfiction.html
@@ -20,13 +20,13 @@
 
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://www.hanayanagi.kim/" />
-<meta property="og:title" content="hi! i'm hana kim!" />
+<meta property="og:title" content="hi! i'm hana kim! - personal: moving." />
 <meta property="og:description" content="" />
 <meta property="og:image" content="sleeperedpanda.png" />
 
 <meta property="twitter:card" content="sleeperedpanda.png" />
 <meta property="twitter:url" content="http://www.hanayanagi.kim/" />
-<meta property="twitter:title" content="hi! i'm hana kim!- personal: moving." />
+<meta property="twitter:title" content="hi! i'm hana kim! - personal: moving." />
 <meta property="twitter:description" content="" />
 <meta property="twitter:image" content="sleeperedpanda.png" />
 
