add fiction page, first prologue chapter, fix index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="about.html" style="margin:0 15px;">about</a>
         <a href="bsky.html" style="margin:0 15px;">microblogging</a>
         <a href="nonfiction.html" style="margin:0 15px;">macroblogging</a>
-        <a href="#" style="margin:0 15px;">fiction</a>
+        <a href="fiction.html" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
     </nav>
      <div class="container">
