--- a/planetanime.html
+++ b/planetanime.html
@@ -37,7 +37,7 @@
         <a href="about.html" style="margin:0 15px;">about</a>
         <a href="bsky.html" style="margin:0 15px;">microblogging</a>
         <a href="nonfiction.html" style="margin:0 15px;">macroblogging</a>
-        <a href="#" style="margin:0 15px;">fiction</a>
+        <a href="fiction.html" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
     </nav>
      <div class="container">
@@ -75,7 +75,6 @@
         <img src="mari.gif" width="88" height="31" alt="">
         <img src="machu.gif" width="88" height="31" alt="">
         <img src="mariners.png" width="88" height="31" alt="">
-        <img src="mafumafu.gif" width="88" height="31" alt="">
         <a href="https://rose-engine.org/signalis/" target="_blank" rel="noopener noreferrer"><img src="elster.gif" width="88" height="31" alt=""></a>
         <img src="becritical.gif" width="88" height="31" alt="">
         <img src="sailormoonmicrobar.gif" width="88" height="31" alt="">
