--- a/fiction.html
+++ b/fiction.html
@@ -1,35 +1,38 @@
+<!-- fiction.html -->
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hi! i'm hana kim! - about me</title>
+    <title>hi! i'm hana kim! - fiction</title>
           <link rel="icon" href="icon.png" type="image/png">
 
-    <meta name="title" content="hi! i'm hana kim!"/>
-    <meta name="description" content="im hana"/>
-
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://www.hanayanagi.kim/"/>
-    <meta property="og:title" content="hi! i'm hana kim!"/>
-    <meta property="og:description" content=""/>
-    <meta property="og:image" content="sleeperedpanda.png"/>
-
-    <meta property="twitter:card" content="summary_large_image"/>
-    <meta property="twitter:url" content="https://www.hanayanagi.kim/"/>
-    <meta property="twitter:title" content="hi! i'm hana kim!"/>
-    <meta property="twitter:description" content=""/>
-    <meta property="twitter:image" content="sleeperedpanda.png"/>
-
     <style>
-        body { background-color: #feabe6; font-family: Consolas, monospace; text-transform: lowercase;}
+        body { background-color: #feabe6; font-family: consol, monospace; text-transform: none;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
-        h1 { color: #44383f; text-align: left; }
+        h1,h3 { color: #44383f; text-align: left; }
         img { border: 2px transparent #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
         .buttons-row,.buttons-row2 {display: flex; justify-content: center; align-items: center; gap: 1px; margin-top:50px; margin-bottom: -50px;}
     </style>
+    
+<title>hi! i'm hana kim!</title>
+<meta name="title" content="hi! i'm hana kim!" />
+<meta name="description" content="im hana" />
+
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://www.hanayanagi.kim/" />
+<meta property="og:title" content="hi! i'm hana kim! - fiction" />
+<meta property="og:description" content="" />
+<meta property="og:image" content="sleeperedpanda.png" />
+
+<meta property="twitter:card" content="sleeperedpanda.png" />
+<meta property="twitter:url" content="http://www.hanayanagi.kim/" />
+<meta property="twitter:title" content="hi! i'm hana kim! - fiction" />
+<meta property="twitter:description" content="" />
+<meta property="twitter:image" content="sleeperedpanda.png" />
+
 </head>
 <body>
-     <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
+    <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
    <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
         <a href="about.html" style="margin:0 15px;">about</a>
@@ -38,18 +41,16 @@
         <a href="fiction.html" style="margin:0 15px;">fiction</a>
         <a href="#" style="margin:0 15px;">pictures</a>
     </nav>
-     <div class="container">
+    <div class="container">
         <h1>Hi! I'm Hana Kim!</h1>
-        <marquee>about</marquee>
-        <p>hey hi howdy hello! i'm hana yanagi kim! my pronouns are she/they/fox and i am kinda just hanging out.</p>
-        <p>welcome to my website! this is where i keep backups of professional work i'd like to keep in one place, where i post personal blogs, and where i keep short stories and pictures that are special to me (eventually).</p>
-        <p>i kinda do a lot of different stuff, but my main thing is that i'm a writer; i've worked in games journalism off and on for about 5 years, and i am currently working on my first novel.</p>
-        <p>in my free time, i like to play video games, draw, and take photos of things i see while i'm on walks or traveling.</p>
-
- 
-      <!-- add more buttons -->
-
-      </div>
+        <marquee>fiction</marquee>
+        <p>links</p>
+        <ul>
+            <li><a href="prologue1.html">parts of a whole - prologue I</a></li>          
+        </ul>
+        <hr>
+        
+    </div>
                        <div class="buttons-row">
         <img src="imhigh.gif" width="88" height="31" alt="">
         <img src="lavalamp.gif" width="88" height="31" alt="">
@@ -72,6 +73,6 @@
         <img src="obbears.png" width="88" height="31" alt="">
         </div>
 
-    <script src="oneko.js" data-cat="fox.png"></script>
+        <script src="oneko.js" data-cat="fox.png"></script>
 </body>
 </html>
