--- a/prologue1.html
+++ b/prologue1.html
@@ -5,7 +5,7 @@
           <link rel="icon" href="icon.png" type="image/png">
 
     <style>
-        body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
+        body { background-color: #feabe6; font-family: consol, monospace; text-transform: none;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
         h1,h3 { color: #44383f; text-align: left; }
         img { border: 2px transparent #1f1f1f; }
