--- a/fiction.html
+++ b/fiction.html
@@ -47,6 +47,8 @@
         <p>links</p>
         <ul>
             <li><a href="prologue1.html">parts of a whole - prologue I</a></li>          
+            <li><a href="prologue2.html">parts of a whole - prologue II</a></li>          
+
         </ul>
         <hr>
         
