--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><a href="about.html">about me</a></li>
             <li><a href="bsky.html">microblogging - bluesky feed</a></li>
             <li><a href="nonfiction.html">macroblogging - non-fiction writing, musings, thoughts</a></li>
-            <li><a href="#">fiction (under construction)</a></li>
+            <li><a href="fiction.html">fiction</a></li>
             <li><a href="#">pictures (under construction)</a></li>
         </ul>
         <hr>
