--- a/prologue1.html
+++ b/prologue1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>hi! i'm hana kim! - thanks, mom, but specifically, mom from boyfriend dungeon</title>
+    <title>hi! i'm hana kim! - parts of a whole - prologue 1</title>
           <link rel="icon" href="icon.png" type="image/png">
 
     <style>
