--- a/fiction.html
+++ b/fiction.html
@@ -42,7 +42,7 @@
         <a href="#" style="margin:0 15px;">pictures</a>
     </nav>
     <div class="container">
-        <h1>Hi! I'm Hana Kim!</h1>
+        <h1>hi! i'm hana kim!</h1>
         <marquee>fiction</marquee>
         <p>links</p>
         <ul>
